--- a/ai-2048/build.gradle
+++ b/ai-2048/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.10'
 
     check.dependsOn jacocoTestReport
-    
+    testCompile "org.mockito:mockito-core:2.+"
     
 }
 
