--- a/ai-2048/build.gradle
+++ b/ai-2048/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'jacoco'
+apply plugin: 'application'
+
+mainClassName = 'ConsoleUI.ConsoleUI'
 
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
@@ -38,6 +41,10 @@ jacocoTestReport {
         xml.enabled = true
         html.enabled = true
     }
+}
+
+run{
+ standardInput = System.in
 }
 
 
