--- a/ai-2048/build.gradle
+++ b/ai-2048/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+  id "com.github.johnrengelman.shadow" version "4.0.1"
+}
+
 apply plugin: 'java'
 apply plugin: 'jacoco'
 apply plugin: 'application'
@@ -31,6 +35,7 @@ dependencies {
     //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
     testCompile group: 'junit', name: 'junit', version: '4.10'
 
+
     check.dependsOn jacocoTestReport
     testCompile "org.mockito:mockito-core:2.+"
     
@@ -46,6 +51,4 @@ jacocoTestReport {
 run{
  standardInput = System.in
 }
-
-
 
